# bedrocksemantic

./: .dockerignore  .gitignore  Makefile  README.md  architecture.md  check_list.md  documentation.md  intial.md  localsetup.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  codeql.yml  deploy-dev.yml  deploy-prod.yml  deploy-qa.yml  terraform-plan.yml
app/: __init__.py  agent.py  config.py  logging_config.py  main.py  models.py  observability.py  prompts.py
app/agents/: __init__.py  cost_agent.py  operational_agent.py  orchestrator.py  performance_agent.py  pillar_agent.py  recommendation_engine.py  reliability_agent.py  security_agent.py  service_agent.py  system_assessment.py  workload_agent.py
app/kernel/: __init__.py  kernel.py  memory.py  planner.py  plugin_manager.py  prompt_manager.py  router.py  tool_registry.py  workflow.py
app/models/: __init__.py  assessment.py  request.py  response.py
app/orchestrator/: __init__.py  kernel_manager.py  workflow.py
app/plugins/: __init__.py  aws_plugin.py  github_plugin.py  internal_api_plugin.py  jira_plugin.py
app/prompts/: __init__.py  cost.txt  operational_excellence.txt  (+8 more)
docker/: Dockerfile  docker-compose.yml
scripts/: build.sh  deploy.sh  destroy.sh  ingest_pdf.py  run_ingest_container.sh
terraform/: .terraform.lock.hcl  backend.tf  data.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_agent.py  test_config.py  test_embedding_service.py  test_main.py  test_orchestrator.py  test_prompts.py  test_rag.py  test_rag_vector.py  test_session_memory.py
(+52 files in other folders)
